Finished Nav, Working in Content Wrapper, On #Home

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
 </head>
 <body>
         <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="#">
-                <span class="h3 fw-bold">Imaraan Sheldon</span>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container flex-lg-column">
+              <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
+                <span class="h3 fw-bold d-block d-lg-none">Imaraan Sheldon</span>
+                <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/temp.jpeg" class="d-none d-lg-block rounded-circle" alt="Mugshot">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto flex-lg-column text-lg-center">
                   <li class="nav-item">
                     <a class="nav-link" href="#Home">Home</a>
                   </li>
@@ -54,10 +55,25 @@
             </div>
           </nav>
           <!-- /Navigation Bar/ -->
-
-    <main></main>
+<!-- Content Wrapper -->
+    <main id="Content-Wrapper">
+      <!-- Home -->
+      <section id="Home" class="full-height px-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8">
+              <h1 class="display-4 fw-bold">I’m a <span class="text-brand">Full-Stack</span> Developer From Cape Town, South Africa</h1>
+              <p class="lead">I’m Imaraan Sheldon. I’m passionate about my personal growth as a Full-stack Developer and I craft unique & high-performing Websites, custom tailored.</p>
+              <a href="#Work" class="btn btn-brand">View My Work</a>
+              <a href="#Contact" class="link-custom">Call (+27)081 319 8477</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /Home/ -->
+    </main>
+  <!-- /Content Wrapper/ -->
 
     <footer></footer>
-
 </body>
 </html>
