Finished Homepage & Starting on Services

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 <!-- Content Wrapper -->
     <main id="Content-Wrapper">
       <!-- Home -->
-      <section id="Home" class="full-height px-5">
+      <section id="Home" class="full-height px-lg-5">
         <div class="container">
           <div class="row">
             <div class="col-lg-8">
               <h1 class="display-4 fw-bold">I’m a <span class="text-brand">Full-Stack</span> Developer From Cape Town, South Africa</h1>
-              <p class="lead">I’m Imaraan Sheldon. I’m passionate about my personal growth as a Full-stack Developer and I craft unique & high-performing Websites, custom tailored.</p>
+              <p class="lead mt-2 mb-4">I’m Imaraan Sheldon. I’m passionate about my personal growth as a Full-stack Developer and I craft unique & high-performing Websites, custom tailored.</p>
               <a href="#Work" class="btn btn-brand">View My Work</a>
               <a href="#Contact" class="link-custom">Call (+27)081 319 8477</a>
             </div>
@@ -71,6 +71,12 @@
         </div>
       </section>
       <!-- /Home/ -->
+
+      <!-- Services -->
+      <section id="services" class="full-height px-lg-5">
+
+      </section>
+      <!-- /Services -->
     </main>
   <!-- /Content Wrapper/ -->
 
