--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>Web Portfolio</title>
+    <title>Imaraan Sheldon</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".nav-link">
         <!-- Navigation Bar -->
@@ -81,7 +81,7 @@
       <section id="Services" class="full-height px-lg-5">
         <div class="container">
 
-          <div class="row pb-4" data-aos="fade-up"data-aos-duration="1000">
+          <div class="row pb-4 text-sm-center text-md-start" data-aos="fade-up"data-aos-duration="1000">
             <div class="col-lg-8">
               <h6 class="text-brand">SERVICES</h6>
               <h1>Services That I Provide</h1>
@@ -133,7 +133,7 @@
       <!-- Work -->
       <section id="Work" class="full-height px-lg-5">
         <div class="container"></div>
-        <div class="row pb-4" data-aos="fade-up"data-aos-duration="1000">
+        <div class="row pb-4 text-sm-center text-md-start" data-aos="fade-up"data-aos-duration="1000">
           <div class="col-lg-8">
             <h6 class="text-brand">WORK</h6>
             <h1>My Recent Projects</h1>
@@ -142,7 +142,7 @@
 
         <div class="row g-4 mx-1">
 
-          <div class="col-md-6" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="300">
+          <div class="col-md-6 mb-4" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="300">
             <div class="custom-card rounded-4 p-2 bg-base shadow-effect">
               <div class="custom-card-image rounded-4">
                 <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/TravelStore.png" class="rounded-4" alt="Card1">
@@ -156,7 +156,7 @@
             </div>
           </div>
 
-          <div class="col-md-6" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="600">
+          <div class="col-md-6 mb-4" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="600">
             <div class="custom-card rounded-4 p-2 bg-base shadow-effect">
               <div class="custom-card-image rounded-4">
                 <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/OnlyStore.png" class="rounded-4" alt="Card1">
@@ -171,7 +171,7 @@
           </div>
         </div>
 
-          <div class="col-md-6" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="600">
+          <div class="col-md-6 mb-4" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="600">
             <div class="custom-card rounded-4 p-2 bg-base shadow-effect">
               <div class="custom-card-image rounded-4">
                 <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/LASStore.png" class="rounded-4" alt="Card1">
@@ -192,7 +192,7 @@
       <!-- About -->
       <section id="About" class="full-height px-lg-5">
 
-        <div class="row pb-4" data-aos="fade-up"data-aos-duration="1000">
+        <div class="row pb-4 text-sm-center text-md-start" data-aos="fade-up"data-aos-duration="1000">
           <div class="col-lg-8">
             <h6 class="text-brand">ABOUT</h6>
             <h1>My Education & Experience</h1>
@@ -273,7 +273,7 @@
       <!-- Skills -->
       <section id="Skills" class="full-height px-lg-5">
 
-        <div class="row pb-4" data-aos="fade-up"data-aos-duration="1000">
+        <div class="row pb-4 text-sm-center text-md-start" data-aos="fade-up"data-aos-duration="1000">
           <div class="col-lg-8">
             <h6 class="text-brand">Skills</h6>
             <h1>My Skills</h1>
@@ -404,7 +404,7 @@
 
       <!-- Testimonials -->
       <section id="Testimonials" class="full-height px-lg-5" data-aos="fade-up"data-aos-duration="1000">
-        <div class="row pb-4">
+        <div class="row pb-4 text-sm-center text-md-start">
           <div class="col-lg-8">
             <h6 class="text-brand">TESTIMONIALS</h6>
             <h1>What People Think About Me</h1>
@@ -524,6 +524,44 @@
     </main>
   <!-- /Content Wrapper/ -->
 
-    <footer></footer>
+    <footer class="container-fluid" id="footer">
+      <div class="row m-4">
+        <div class="col-sm-6 m-autor text-end">
+
+          <h6 class="text-brand">IMARAAN SHELDON &copy; Rights Reserved 2024</h6>
+          <h6 class="text-brand">IMARAAN SHELDON</h6>
+
+        </div>
+        <div class="col-sm-6 m-auto text-start ">
+
+          <div class="d-flex align-items-baseline footer-icon">
+            <i class="las la-user"></i>
+            <a class="ms-1" href="#Home">Try Again</a>
+          </div>
+
+          <div class="d-flex align-items-baseline footer-icon">
+            <i class="las la-address-book"></i>
+            <a class="ms-1" href="#Contact">Contact me: 081 3198 4877</a>
+          </div>
+
+          <div class="d-flex align-items-baseline footer-icon">
+            <i class="las la-map-marker"></i>
+            <a class="ms-1" href="#Contact">Ottery, Cape Town, Western Cape</a>
+          </div>
+
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
+<!-- 
+  <div class="social-container">
+  <a href="https://www.facebook.com/KDFSpanish/?locale=es_LA" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://www.linkedin.com/company/kasa-de-franko-spanish-school" class="social-icon"><i class="fa-brands fa-linkedin-in"></i></a>
+  <a href="https://www.instagram.com/kasadefrankospanishschool/" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+  <a href="https://www.yelp.com/biz/kasa-de-franko-fun-spanish-school-san-jose-2" class="social-icon"><i class="fa-brands fa-yelp"></i></a>
+  <a href="https://www.youtube.com/@KasaDeFrankoSpanishSchool" class="social-icon"><i class="fa-brands fa-youtube"></i></a>
+</div>
+
+I need you to help me with plumbling after class, please it'll take an hour. 
+-->
