--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="container flex-lg-column">
               <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
                 <span class="h3 fw-bold d-block d-lg-none">Imaraan Sheldon</span>
-                <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/temp.jpeg" class="d-none d-lg-block rounded-circle" alt="Mugshot">
+                <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/Imaraan.jpg" class="d-none d-lg-block rounded-circle" alt="Mugshot">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
                 <h3 class="mb-4">Branding</h3>
                 <p>
                   A comprehensive branding service tailored to elevate your brand's identity and market presence! With a keen focus on clarity, consistency, and differentiation, my expertise ensures that your brand message resonates powerfully with your target audience while maintaining a cohesive and recognizable image across all platforms. My strategic approach highlights companies unique strengths, setting them apart in competitive landscapes and fostering deep engagement with their audience. Through my adaptable strategies and meticulous measurement of key metrics, I guarantee tangible results that propel your brand towards enduring success. Let me be the one to guide your company to that success.</p>
-                  <a href="#" class="link-custom">Read More</a>
+                  <a href="#About" class="link-custom">Read More</a>
               </div>
             </div>
 
@@ -110,7 +110,7 @@
                 <h3 class="mb-4">Web Development</h3>
                 <p>
                   In web development, my capabilities are diverse and dynamic. I excel in crafting visually stunning and user-friendly websites that seamlessly blend aesthetics with functionality, ensuring an exceptional experience across all devices. My proficiency in coding languages like HTML, CSS, and JavaScript allows me to bring creative visions to life and implement intricate features with precision. I'm deeply strategic, integrating user behavior insights, SEO best practices, and performance optimization techniques to drive impactful results for my clients. My adaptability, attention to detail, and commitment to staying ahead of emerging trends position me as a formidable force in the ever-evolving realm of web development.</p>
-                  <a href="#" class="link-custom">Read More</a>
+                  <a href="#About" class="link-custom">Read More</a>
                 </div>
             </div>
             
@@ -122,7 +122,7 @@
                 <h3 class="mb-4">Graphic Design</h3>
                 <p>
                   In graphic design, my capabilities shine brightly. I specialize in crafting visually captivating designs that not only grab attention but also communicate messages effectively. Whether it's creating eye-catching logos, stunning branding materials, or engaging social media graphics, I have the creativity and technical skill to bring ideas to life in a way that resonates with audiences. My expertise spans across various design software and tools, allowing me to execute projects with precision and finesse. With my keen eye for detail and commitment to delivering top-notch results, I am well-equipped to tackle any design challenge and leave a lasting impact within your companies present, future & beyond.</p>
-                  <a href="#" class="link-custom">Read More</a>
+                  <a href="#About" class="link-custom">Read More</a>
             </div>
           </div>
 
@@ -192,10 +192,26 @@
                 <h4 class="my-3">Urban Tonic</h4>
                 <p>
                   "Welcome to UrbanTonic, where culinary delight meets urban flair. Developed in Luke Shaw's MSITA class in 2023, UrbanTonic represents a fresh approach to catering services, combining gourmet expertise with contemporary style. Our website offers a tantalizing array of menu options, from elegant corporate gatherings to lively social events, all designed to elevate the dining experience. With seamless online ordering and personalized service, UrbanTonic ensures that every event is an unforgettable culinary journey. Join us in redefining catering excellence with UrbanTonic – where flavor, innovation, and sophistication converge."</p>
-                  <a href="https://imaraansheldon.github.io/LAS-Store/" target="_blank" class="link-custom">View Project</a>
+                  <a href="https://imaraansheldon.github.io/Urban-Tonic/" target="_blank" class="link-custom">View Project</a>
               </div>
             </div>
           </div>
+
+          <div class="col-md-3"></div>
+          <div class="col-md-6 mb-4" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="900">
+            <div class="custom-card rounded-4 p-2 bg-base shadow-effect">
+              <div class="custom-card-image rounded-4">
+                <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/RIN.png" class="rounded-4" alt="Card1">
+              </div>
+              <div class="custom-card-content rounded-bottom-4 p-2">
+                <h4 class="my-3">RIN: Shoe Store</h4>
+                <p>
+                  "RIN: Your go-to destination for stylish footwear. Discover a curated selection of shoes designed to elevate your every step. From casual kicks to elegant heels, we've got your feet covered with quality and style."</p>
+                  <a href="https://imaraansheldon.github.io/ClothingStore/" target="_blank" class="link-custom">View Project</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3"></div>
         </div>
 
       </section>
@@ -475,7 +491,7 @@
           </div>
 
               <div class="col-md-10 shadow-effect d-flex justify-content-start bg-base rounded-4 p-2" data-aos="fade-up"data-aos-duration="1000" data-aos-delay="700">
-            <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/Ismail.jpg" alt="No" class="img-fluid rounded-circle">
+            <img src="https://imaraansheldon.github.io/allImages/portfolio-Images/Joel.jpg" alt="No" class="img-fluid rounded-circle">
             <div class="p-2">
               <h4>Lecturer</h4>
               <h5>Joel Mukanya</h5>
@@ -520,7 +536,7 @@
                 </div>
      
                 <div class="form-group col-6">
-                  <button type="submit" class="btn btn-brand">Contact Me</button>
+                  <button type="submit" data-bs-target="_blank" class="btn btn-brand">Contact Me</button>
                 </div>
                 <div class="form-group col-6">
                   <button type="reset" class="btn btn-brand">Clear</button>
